<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/header_group">
        <item
            android:id="@+id/all_projects"
            android:icon="@drawable/ic_assignment"
            android:orderInCategory="0"
            android:title="@string/all_projects"/>
    </group>
    <group
        android:id="@+id/body_group">
        <item
            android:id="@+id/favorites"
            android:enabled="true"
            android:orderInCategory="1"
            android:title="@string/favorites">
            <menu>
                <group
                    android:id="@+id/favorites_group">
                </group>
            </menu>
        </item>
        <item
            android:id="@+id/current_task"
            android:enabled="true"
            android:orderInCategory="1"
            android:title="@string/current_tasks">
            <menu>
                <group
                    android:id="@+id/current_task_group">
                </group>
            </menu>
        </item>
    </group>
    <group
        android:id="@+id/footer_group">
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings"
            android:orderInCategory="2"
            android:title="@string/action_settings"/>
        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_info"
            android:orderInCategory="2"
            android:title="@string/action_about"/>
    </group>
</menu>