<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/edit"
        android:orderInCategory="1"
        android:title="@string/edit_title"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="1"
        android:title="@string/action_search"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort"
        android:orderInCategory="1"
        android:title="@string/action_sort"
        app:showAsAction="ifRoom">

        <menu>
            <group
                android:checkableBehavior="single">

                <item
                    android:id="@+id/sort_by_name"
                    android:checked="true"
                    android:title="@string/name"/>

                <item
                    android:id="@+id/sort_by_priority"
                    android:title="@string/priority"/>

                <item
                    android:id="@+id/sort_by_deadline"
                    android:title="@string/deadline"/>

            </group>
        </menu>

    </item>

</menu>