<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/deadline_date_property"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:orientation="vertical"
    android:padding="@dimen/text_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/property_deadline_date_title"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textColor="@android:color/secondary_text_light"/>

    <TextView
        android:id="@+id/summary_deadline_date"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColor="@android:color/tertiary_text_light"/>

</LinearLayout>