<resources>
    <string name="app_name" translatable="false">Todo</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="project_title">Projects</string>
    <string name="edit_title">Edit</string>
    <string name="all_projects">All projects</string>
    <string name="todo_comment" translatable="false">TODO so many things</string>
    <string name="favorites">Favorites</string>
    <string name="current_tasks">Current tasks</string>
    <string name="project_icon_description" translatable="false">The icon of the project</string>
    <string name="priority_label_description" translatable="false">The label of the priority</string>
    <string name="color_description" translatable="false">Image to display the color</string>
    <string name="project_name">Project name</string>
    <string name="new_project">New project</string>
    <string name="new_project_created">New project created</string>
    <string name="new_project_was_not_created">New project was not created</string>
    <string name="configure">Configure</string>
    <string name="task_name">Task name</string>
    <string name="new_task">New task</string>
    <string name="new_task_created">New task created</string>
    <string name="new_task_was_not_created">New task was not created</string>
    <string name="no_current_task">No current task</string>
    <string name="waiting">Waiting</string>
    <string name="in_progress">In Progress</string>
    <string name="completed">Completed</string>
    <string name="action_search">Search</string>
    <string name="action_sort">Sort</string>
    <string name="name">Name</string>
    <string name="priority">Priority</string>
    <string name="deadline">Deadline</string>
    <string name="preferences_name_key" translatable="false">application_preferences</string>
    <string name="unlimited">Unlimited</string>

    <string name="settings_priority_max_value_title">Maximum priority value</string>
    <string name="settings_priority_max_value_summary">Set the maximum possible value for the priority of tasks and projects</string>
    <string name="settings_priority_max_value_key" translatable="false">max_priority</string>

    <string name="action_about">About</string>
    <string name="version">Version</string>
    <string name="version_number" translatable="false">1.0</string>
    <string name="developer">Developer</string>
    <string name="developer_name" translatable="false">Florian Arnould</string>

    <string name="property_color_title">Color</string>
    <string name="property_color_summary">The color of the project, used to fill the project icon</string>

    <string name="property_priority_title">Priority</string>
    <string name="property_priority_summary">Represent the importance you attribute to this project. On value, greater means less important.</string>

    <string name="property_deadline_date_title">Deadline Date</string>

    <string name="property_deadline_whole_day_title">Whole day</string>
    <string name="property_deadline_whole_day_summary">The end of the project is an entire day.</string>

    <string name="property_deadline_time_title">Deadline Time</string>
</resources>
